@@ -57,7 +57,7 @@ make install \
 %{_mandir}/man8/*
 
 %changelog
-* Wed Nov 07 2007 - dgilbert at interlog dot com
+* Mon Nov 12 2007 - dgilbert at interlog dot com
 - allow multiple devices to be given
   * sdparm-1.03
 * Mon Oct 08 2007 - dgilbert at interlog dot com
